tdf#115329 make navigate by drawing to previous drawing work

Change-Id: I7d93dc3accd7cc092f068524cb567de74a479343